--- a/frontend/public/sandbox.html
+++ b/frontend/public/sandbox.html
@@ -14,6 +14,30 @@
 <body>
     <div id="root"></div>
     <script type="text/javascript">
+        // --- Error Boundary ---
+        class ErrorBoundary extends React.Component {
+            constructor(props) {
+                super(props);
+                this.state = { hasError: false, error: null };
+            }
+
+            static getDerivedStateFromError(error) {
+                return { hasError: true, error: error };
+            }
+
+            componentDidCatch(error, errorInfo) {
+                console.error("Uncaught error in user component:", error, errorInfo);
+            }
+
+            render() {
+                if (this.state.hasError) {
+                    const errorMessage = this.state.error ? this.state.error.toString() : 'An unknown error occurred.';
+                    return React.createElement('pre', { style: { color: 'red', whiteSpace: 'pre-wrap', padding: '10px', fontFamily: 'monospace' } }, `Render Error:\n${errorMessage}`);
+                }
+                return this.props.children;
+            }
+        }
+
         // --- Communication Layer ---
         const parentOrigin = '*'; // In production, set this to your app's origin for security
 
@@ -50,7 +74,7 @@
             } catch (error) {
                 console.error("Babel Transpilation Error:", error);
                 // Return code for a component that displays the error
-                return `const MyErrorComponent = () => React.createElement('pre', { style: { color: 'red', whiteSpace: 'pre-wrap', padding: '10px' } }, '${error.message.replace(/'/g, "\\'").replace(/\n/g, "\\n")}');\nexport default MyErrorComponent;`;
+                return `const MyErrorComponent = () => React.createElement('pre', { style: { color: 'red', whiteSpace: 'pre-wrap', padding: '10px', fontFamily: 'monospace' } }, 'Babel Error:\\n${error.message.replace(/'/g, "\\'").replace(/\n/g, "\\n")}');\nexport default MyErrorComponent;`;
             }
         }
 
@@ -61,11 +85,20 @@
             const exports = {};
             const module = { exports };
             
+            // Create a dummy 'require' function to handle transpiled 'import React from "react";'
+            const require = (moduleName) => {
+                if (moduleName === 'react') {
+                    return window.React; // 'React' is globally available from the script tag
+                }
+                // For now, we only support 'react'.
+                throw new Error(`Cannot find module '${moduleName}'. Only 'react' is supported in this sandbox.`);
+            };
+            
             try {
-                new Function('React', 'module', 'exports', transpiledCode)(React, module, exports);
+                new Function('React', 'module', 'exports', 'require', transpiledCode)(React, module, exports, require);
             } catch (error) {
                  console.error("Runtime Error in User Code:", error);
-                 const ErrorComponent = () => React.createElement('pre', { style: { color: 'red', whiteSpace: 'pre-wrap', padding: '10px' } }, `Runtime Error:\n${error.message}`);
+                 const ErrorComponent = () => React.createElement('pre', { style: { color: 'red', whiteSpace: 'pre-wrap', padding: '10px', fontFamily: 'monospace' } }, `Runtime Error:\n${error.message}`);
                  ReactDOM.render(React.createElement(ErrorComponent), document.getElementById('root'));
                  return;
             }
@@ -73,17 +106,16 @@
             const UserComponent = module.exports.default || module.exports;
 
             if (typeof UserComponent !== 'function' && typeof UserComponent !== 'object') {
-                 const ErrorComponent = () => React.createElement('pre', { style: { color: 'red', padding: '10px' } }, 'Error: Component did not export a default React component.');
+                 const ErrorComponent = () => React.createElement('pre', { style: { color: 'red', padding: '10px', fontFamily: 'monospace' } }, 'Error: Component did not export a default React component.');
                  ReactDOM.render(React.createElement(ErrorComponent), document.getElementById('root'));
                  return;
             }
 
             const allProps = { ...props, ...callbacks };
 
-            ReactDOM.render(
-                React.createElement(UserComponent, allProps),
-                document.getElementById('root')
-            );
+            // Wrap the user component in our error boundary
+            const app = React.createElement(ErrorBoundary, null, React.createElement(UserComponent, allProps));
+            ReactDOM.render(app, document.getElementById('root'));
         }
 
         // --- Event Listener ---
